--- a/output/index.html
+++ b/output/index.html
@@ -37,14 +37,14 @@
             Según ruby-lang.org, "Ruby es un lenguaje de programación dinámico y de código 
             abierto enfocado en la simplicidad y la productividad. Su elegante sintaxis 
             se siente natural al leerla y fácil al escribirla". Este lenguaje fue creado por <a href="https://es.wikipedia.org/wiki/Yukihiro_Matsumoto">Yukihiro "Matz" Matsumoto</a>, quien combinó sus lenguajes 
-            favoritos (Perl, Smalltalk, Eiffel, Ada y Lisp) y creo uno nuevo que incluyera los paradigmas
-            de programación funcional como imperativa.
+            favoritos (Perl, Smalltalk, Eiffel, Ada y Lisp) y creó uno nuevo que incluyera los paradigmas
+            de programación funcional, como imperativa.
           </p>
           <p>
             Desde su publicación en 1995, Ruby ha incrementado año tras año la cantidad de adeptos 
             programadores. Considerándolo ya en el top 10 de lenguajes según el <a href="http://www.tiobe.com/tiobe_index?page=index">índice TIOBE.com</a>.
           </p>
-          <p>Muchos definen a Ruby un lenguaje simple en apariencia, pero complejo por dentro; tal igual como el cuerpo humano.</p>
+          <p>Muchos definen a Ruby un lenguaje simple en apariencia, pero complejo por dentro; al igual que el cuerpo humano.</p>
           <p>La característica principal de Ruby es que <b>todo es un objeto</b>; es decir, que se puede asignar propiedades y acciones a toda la información y código. Por ejemplo:</p>
           <pre class="prettyprint lang-ruby"><code>3.times { print "FrontEnd Labs - Ruby" }</code></pre>
           <p>
@@ -82,7 +82,7 @@ y = 10.restar 4
 end</code></pre>
           <p>Cualquier clase que implemente el método <span class="inline_code">each</span>&nbsp;puede incorporar el módulo <span class="inline_code">Enumerable</span>, que le agrega un conjunto de métodos que usan <span class="inline_code">each</span>&nbsp;para recorrer sus elementos.</p>
           <p>Por último <b>la apariencia visual</b>, se prefiere utilizar las palabras claves en inglés. Ruby no necesita declaraciones de variables. 
-            Se utilizan las siguientes convenciones para nombre y determinar el alcance de las mismas.
+            Se utilizan las siguientes convenciones para nombrar y determinar el alcance de las mismas.
             <ul>
               <li> <span class="inline_code">var</span>&nbsp;puede ser una variable local.</li>
               <li><span class="inline_code">@var</span>&nbsp;es una variable de instancia.</li>
@@ -164,7 +164,7 @@ end</code></pre>
           <h3>Clases Básicas de Ruby</h3>
           <p>Como mencionamos antes todos los elementos de Ruby son objetos y a continuación mencionaremos las clases básicas de Ruby:
             <ol>
-              <li>Entero (<span class="inline_code">Integer</span>), los enteros son elementos de un conjunto de números que reúne a los positivos (1, 2, 3 ...), a los negativos (..., -3, -2, -1) y al 0. A continuación se mencionaran los métodos más importantes:
+              <li>Entero (<span class="inline_code">Integer</span>
                 <ul>
                   <li> <span class="inline_code">to_i</span>: Convierte un objeto en un entero.</li>
                   <li><span class="inline_code">times {|i| block}</span>: Itera el bloque determinado, pasando los valores de cero a int - 1.
@@ -191,7 +191,7 @@ end
                   </li>
                 </ul>
               </li>
-              <li>Real (<span class="inline_code">Float</span>), los reales incluyen tanto a los números enteros, racionales e irracionales. A continuación se mencionaran los métodos más importantes:
+              <li>Real (<span class="inline_code">Float</span>), los reales incluyen tanto a los números enteros, racionales e irracionales. A continuación se mencionan los métodos más importantes:
                 <ul>
                   <li> <span class="inline_code">to_f</span>: Convierte un objeto en un float.</li>
                   <li><span class="inline_code">ceil</span>: Retorna el menor entero mayor o igual al real.
@@ -228,7 +228,7 @@ end
 Complex(2, 3)                  #=> (2 + 3i)
 Complex.polar(3, 0)           #=> (3.0 + 0.0i)
 Complex.polar(3, Math::PI/2) #=> (1.836909530733566e-16 + 3.0i)
-</code></pre>A continuación se mencionaran los ḿétodos más importantes:
+</code></pre>A continuación se mencionan los ḿétodos más importantes:
                 <ul>
                   <li><span class="inline_code">to_c</span>: Convierte un objeto en un complejo.</li>
                   <li><span class="inline_code">cmp + numeric -> complex</span>: Realiza la adición.
@@ -257,7 +257,7 @@ Complex(-8) ** Rational(1, 3) #=> (1.0000000000000002+1.7320508075688772i)</code
                   </li>
                 </ul>
               </li>
-              <li>Cadenas (<span class="inline_code">String</span>), manipulan una secuencia de caracteres. Son representados utilizando comillas dobles (" ") o comillas simples (' '). A continuación se mencionaran los métodos más importantes:
+              <li>Cadenas (<span class="inline_code">String</span>), manipulan una secuencia de caracteres. Son representados utilizando comillas dobles (" ") o comillas simples (' '). A continuación se mencionan los métodos más importantes:
                 <ul>
                   <li><span class="inline_code">to_s</span>: Convierte un objeto en una cadena.</li>
                   <li><span class="inline_code">size</span>: Retorna el tamaño de la cadena.</li>
@@ -265,33 +265,28 @@ Complex(-8) ** Rational(1, 3) #=> (1.0000000000000002+1.7320508075688772i)</code
                     <pre class="prettyprint lang-ruby"><code>"Frontend " + "labs" #=> "Frontend labs"</code></pre>
                   </li>
                   <li><span class="inline_code">delete([otro_str]+) -> nuevo_str</span>: Retorna una copia de la cadena eliminando los argumentos que lo intersectan.
-                    <pre class="prettyprint lang-ruby"><code>"hello".delete "l","lo" #=> "heo"
-"hello".delete "lo"     #=> "he"
-"hello".delete "ej-m"   #=> "ho"</code></pre>
-                  </li>
-                  <li><span class="inline_code">delete([otro_str]+) -> nuevo_str</span>: Retorna una copia de la cadena eliminando los argumentos que lo intersectan.
-                    <pre class="prettyprint lang-ruby"><code>"hello".delete "l","lo" #=> "heo"
-"hello".delete "lo"     #=> "he"
-"hello".delete "ej-m"   #=> "ho"</code></pre>
+                    <pre class="prettyprint lang-ruby"><code>"frontend labs".delete "l","la" #=> "frontend abs"
+"frontend labs".delete "lo"     #=> "frontend bs"
+"frontend labs".delete "ej-m"   #=> "frontnd abs"</code></pre>
                   </li>
                   <li><span class="inline_code">capitalize -> nuevo_str</span>: Retorna una copia de la cadena con el primer carácter convertido en mayúscula y el resto en minúscula.
-                    <pre class="prettyprint lang-ruby"><code>"hello".capitalize  #=> "Hello"
-"HELLO".capitalize  #=> "Hello"
-"123ABC".capitalize #=> "123abc"</code></pre>
+                    <pre class="prettyprint lang-ruby"><code>"frontend labs".capitalize    #=> "Frontend labs"
+"FRONTEND LABS".capitalize    #=> "Frontend labs"
+"123FRONTEND LABS".capitalize #=> "123frontend labs"</code></pre>
                   </li>
                   <li><span class="inline_code">downcase -> nuevo_str</span>: Retorna una copia de la cadena con todos los caracteres en minúscula.
-                    <pre class="prettyprint lang-ruby"><code>"hELLo".capitalize  #=> "hello"</code></pre>
+                    <pre class="prettyprint lang-ruby"><code>"FrontEnd Labs".downcase #=> "frontend labs"</code></pre>
                   </li>
                   <li><span class="inline_code">upcase -> nuevo_str</span>: Retorna una copia de la cadena con todos los caracteres en mayúscula.
-                    <pre class="prettyprint lang-ruby"><code>"hELLo".capitalize  #=> "HELLO"</code></pre>
+                    <pre class="prettyprint lang-ruby"><code>"FrontEnd Labs".upcase #=> "FRONTEND LABS"</code></pre>
                   </li>
                 </ul>
               </li>
-              <li>Booleano (<span class="inline_code">TrueClass</span>&nbsp;o <span class="inline_code">FalseClass</span>), este tipo de variable solo pueden ser de dos tipos true o false.</li>
+              <li>Booleano (<span class="inline_code">TrueClass</span>&nbsp;o <span class="inline_code">FalseClass</span>), este tipo de variable sólo puede ser de dos tipos true o false.</li>
             </ol>
           </p>
           <p>Vale la aclaración que Ruby es un lenguaje sensitivo, es decir que distingue mayúsculas y minúsculas. Así que hay que tener mucho cuidado con eso para las declaraciones. </p>
-          <p>Este es el primer tutorial de <b>Ruby </b>en español dentro de <b>FrontEnd Labs</b>, espero les guste para poder seguir desarrollando otros aspectos de Ruby y tener un conocimiento importante para luego seguir con el plato fuerte que es <b>Ruby on Rails.</b></p>
+          <p>Este es el primer tutorial de <b>Ruby </b>en español dentro de <b>FrontEnd Labs</b>, espero que les guste para poder seguir desarrollando otros aspectos de Ruby y así tener un conocimiento sólido para luego seguir con el plato fuerte que es <b>Ruby on Rails.</b></p>
           <!-- end-->
         </div>
       </article>
